--- a/app/templates/excursion_info.html
+++ b/app/templates/excursion_info.html
@@ -7,7 +7,12 @@
 <form style="margin-top: 15px;" id="myForm" action="change_excursion/{{ desired_excursion.id_excursion }}/" method="post">{% csrf_token %}
 	<table class="table bg-info">
 		<tr id="row1">
-			<th colspan="4">{{ form.facility|as_crispy_field }}</th>
+			<th id="th_status">
+				<label id="label_status"></label>
+				<span id="span_status"></span>
+				{{ form.confirmed|as_crispy_field }}
+			</th>
+			<th colspan="3">{{ form.facility|as_crispy_field }}</th>
 			<th>
 				<label for="id_id_facility" class="col-form-label  requiredField">
 				Select areas:<span class="asteriskField">*</span>
@@ -69,6 +74,19 @@
 
 <script type="text/javascript">
 	$(window).load(function() {
+
+		if ($('#th_status div label input').prop('checked') == true) {
+			$('#div_id_confirmed').text("");
+			$('#label_status').text("Confirmed");
+			$('#th_status').removeClass("sorting_1 btn btn-danger").addClass("btn btn-success");
+			$('#span_status').removeClass("glyphicon glyphicon-remove").addClass("glyphicon glyphicon-ok");
+		}
+		else {
+			$('#div_id_confirmed').text("");
+			$('#label_status').text("Unconfirmed");
+			$('#th_status').removeClass("sorting_1 btn-success").addClass("btn btn-danger");
+			$('#span_status').removeClass("sorting_1 btn-success glyphicon glyphicon-remove").addClass("btn-danger glyphicon glyphicon-remove");
+		}
 
 		id_facility = $("#id_facility").val();
 
