Added sending e-mail and created new branch "to_adminLTE"

--- a/app/templates/submitted.html
+++ b/app/templates/submitted.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-{{ result }}
-<a class="btn btn-primary" href="/">HOME</a>
+{{ result }}<br>
+<a class="btn btn-primary" href="/" style="margin-top: 20px;">HOME</a>
 
 {% endblock %}
