--- a/app/templates/base_generic.html
+++ b/app/templates/base_generic.html
@@ -48,8 +48,11 @@
         <h1><a class="main_title" href="/">System of organization and accounting of excursions in JINR</a></h1>
         <nav class="nav">
             {% if user.is_authenticated %}
-                <h4>Hello, {{ user.get_full_name }}!</h4>
-                <button type="button" class="btn btn-outline-primary">
+                <h4>Hello, {{ user.get_full_name }}!
+                <button type="button" class="btn btn-light">
+                    <a href="/" role="button">Go to Profile Page</a>
+                </button></h4>
+                <button type="button" class="btn btn-light">
                     <a href="{% url 'logout'%}?next={{request.path}}" role="button">Logout</a>
                 </button>
             {% endif %}
