--- a/app/templates/profilepage.html
+++ b/app/templates/profilepage.html
@@ -1,44 +1,25 @@
-{% extends 'adminlte/base.html' %}
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-{% block title %}My Profile{% endblock %}
-{% block content %}
-
-    <div class="box box-info">
-        <div class="box-header with-border">
-          <h3 class="box-title">My Profile</h3>
-        </div>
-        <!-- /.box-header -->
-        <!-- form start -->
-        <form class="form-horizontal">
-          <div class="box-body">
-            <div class="form-group">
-              <label for="inputEmail3" class="col-sm-2 control-label">First Name</label>
-
-              <div class="col-sm-10">
-                <input type="text" class="form-control" value="{{ user.first_name }}">
-              </div>
-            </div>
-            <div class="form-group">
-                <label for="inputEmail3" class="col-sm-2 control-label">Last Name</label>
-  
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" value="{{ user.last_name }}">
+<div class="card-body box-profile">
+                <div class="text-center">
+                  <img class="profile-user-img img-fluid img-circle" src="../../dist/img/user4-128x128.jpg" alt="User profile picture">
                 </div>
-            </div>
-            <div class="form-group">
-                <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
-  
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" value="@{{ user.get_username }}">
-                </div>
-            </div>
-          </div>
-          <!-- /.box-body -->
-          <div class="box-footer">
-            <button type="submit" class="btn btn-info pull-right">CHANGE</button>
-          </div>
-          <!-- /.box-footer -->
-        </form>
-      </div>
 
-{% endblock %}
+                <h3 class="profile-username text-center">Nina Mcintire</h3>
+
+                <p class="text-muted text-center">Software Engineer</p>
+
+                <ul class="list-group list-group-unbordered mb-3">
+                  <li class="list-group-item">
+                    <b>Followers</b> <a class="float-right">1,322</a>
+                  </li>
+                  <li class="list-group-item">
+                    <b>Following</b> <a class="float-right">543</a>
+                  </li>
+                  <li class="list-group-item">
+                    <b>Friends</b> <a class="float-right">13,287</a>
+                  </li>
+                </ul>
+
+                <a href="#" class="btn btn-primary btn-block"><b>Follow</b></a>
+</div>
