--- a/app/templates/base_generic.html
+++ b/app/templates/base_generic.html
@@ -8,7 +8,7 @@
     {% endblock %}
     <style type="text/css">
        .main_title {
-        color: white;
+        color: blue;
        }
 
         tbody tr:hover.selected td,
@@ -54,62 +54,15 @@
 <div class="">
 
     <!-- Logo -->
-    <a href="/" class="logo">
+    <h3><a href="/" class="main_title">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <!-- <span class="logo-mini"><b>System of organization and accounting of excursions in JINR</b></span> -->
       <!-- logo for regular state and mobile devices -->
-      <h3 class="logo-lg"><b>System of organization and accounting of excursions in JINR</b></h3>
+       System of organization and accounting of excursions in JINR
     </a>
+</h3>
 
-    <!-- Header Navbar: style can be found in header.less -->
-    <nav class="main-header navbar navbar-expand navbar-white navbar-light">
-    <!-- Left navbar links -->
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <li>
-        <!-- Sidebar toggle button-->
-            <a class="nav-link" data-toggle="push-menu"><i class="fas fa-bars"></i></a>
-        </li>
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="../../index3.html" class="nav-link">Contact</a>
-      </li>      
-    </ul>
-    </nav>
-  
-
-  <aside class="main-sidebar sidebar-dark-primary elevation-4">
-    <!-- Sidebar -->
-    <div class="sidebar">
-      <!-- Sidebar user (optional) -->
-        <div>
-            Hello, <a href="#">{{ user.get_username }}</a>!
-        </div>
-      <!-- Sidebar Menu -->
-      <nav class="mt-2">
-        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-          <li class="nav-item has-treeview">
-            <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-edit"></i>
-                Apply an application
-            </a>
-          </li>
-          <li class="nav-item has-treeview">
-            <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-calendar-alt"></i>
-                View all applications
-            </a>
-          </li>
-          <li class="nav-item has-treeview">
-            <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-chart-pie"></i>
-                Charts
-            </a>
-          </li>
-      </ul>
-  </nav>
-  <div>
-            <a href="#">Logout</a>
-        </div>
+    
 </div>
     
 
@@ -126,7 +79,7 @@
                 </button>
             {% endif %}
         </nav>
-    </div>
+    </div>-->
 
     <div class="container-fluid">
         
@@ -135,7 +88,7 @@
         {% block content %}
                 
         {% endblock %}
-</div> -->
+</div> 
 
 
 
