--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,13 +2,56 @@
 
 {% block content %}
 
-<a class="btn btn-outline-primary btn-lg top-menu" href="blank">
-	<span class="glyphicon glyphicon-plus"> Fill out an application for an excursion</span>
-</a>
-<p>
-	<a class="btn btn-outline-primary btn-lg top-menu" href="schedule">
-		<span class="glyphicon glyphicon-calendar"> View all excursions</span>
-	</a>
-</p>
+<!-- Header Navbar: style can be found in header.less -->
+    <nav class="main-header navbar navbar-expand navbar-white navbar-light">
+    <!-- Left navbar links -->
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <li>
+        <!-- Sidebar toggle button-->
+            <a class="nav-link" data-toggle="push-menu"><i class="fas fa-bars"></i></a>
+        </li>
+      <li class="nav-item d-none d-sm-inline-block">
+        <a href="../../index3.html" class="nav-link">Contact</a>
+      </li>      
+    </ul>
+    </nav>
+  
+
+  <aside class="main-sidebar sidebar-dark-primary elevation-4">
+    <!-- Sidebar -->
+    <div class="sidebar">
+      <!-- Sidebar user (optional) -->
+      {% if user.is_authenticated %}
+        <div>
+            Hello, <a href="profile/{{ request.user.id }}">{{ user.get_full_name }}</a>!
+        </div>
+    {% endif %}
+      <!-- Sidebar Menu -->
+      <nav class="mt-2">
+        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+          <li class="nav-item has-treeview">
+            <a href="#" class="nav-link">
+              <i class="nav-icon fas fa-edit"></i>
+                Apply an application
+            </a>
+          </li>
+          <li class="nav-item has-treeview">
+            <a href="#" class="nav-link">
+              <i class="nav-icon fas fa-calendar-alt"></i>
+                View all applications
+            </a>
+          </li>
+          <li class="nav-item has-treeview">
+            <a href="#" class="nav-link">
+              <i class="nav-icon fas fa-chart-pie"></i>
+                Charts
+            </a>
+          </li>
+      </ul>
+  </nav>
+  <div>
+            <a href="{% url 'logout'%}?next={{request.path}}">Logout</a>
+        </div>
 
 {% endblock %}
