--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,7 +49,7 @@
       <header class="main-header">
 
         <!-- Logo -->
-          <a href="index2.html" class="logo">
+          <a href="/" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"></span>
       <!-- logo for regular state and mobile devices -->
@@ -90,9 +90,67 @@
     </div>
     <!-- ./wrapper -->
     
-    {% block content %}
+    <!-- Left side column. contains the logo and sidebar -->
+      <aside class="main-sidebar">
 
-        {% endblock %}
+        <!-- sidebar: style can be found in sidebar.less -->
+        <section class="sidebar">
+
+          <!-- Sidebar user panel (optional) -->
+            {% if user.is_authenticated %}
+          <div class="user-panel">
+            <div>
+                <a href="profile/{{ request.user.id }}">{{ user.get_full_name }}</a>
+              <!-- Status -->
+              <br><small><a href="#"><i class="fa fa-circle text-success"></i> Online</a></small>
+            </div>
+          </div>
+            {% endif %}
+
+          <!-- Sidebar Menu -->
+          <ul class="sidebar-menu tree" data-widget="tree">
+              <li class="header">NAVIGATION</li>
+              <!-- Optionally, you can add icons to the links -->
+              <li><a href="#"><i class="fa fa-edit"></i> <span>Apply an application</span></a></li>
+              <li><a href="#"><i class="fa fa-calendar-alt"></i> <span>View all applications</span></a></li>
+            <li class="treeview">
+              <a href="#"><i class="fa fa-chart-pie"></i><span>Charts</span>
+                <span class="pull-right-container">
+                    <i class="fa fa-angle-left pull-right"></i>
+                  </span>
+              </a>
+              <ul class="treeview-menu">
+                <li><a href="#">Link in level 2</a></li>
+                <li><a href="#">Link in level 2</a></li>
+              </ul>
+            </li>
+              <li class="header">ACTIONS</li>
+              <li><a href="{% url 'logout'%}?next={{request.path}}"><i class="fa fa-sign-out-alt"></i> <span>Logout</span></a></li>
+          </ul>
+          <!-- /.sidebar-menu -->
+        </section>
+        <!-- /.sidebar -->
+      </aside>
+
+      <!-- Content Wrapper. Contains page content -->
+      <div class="content-wrapper" style="min-height: 298px;">
+        <!-- Content Header (Page header) -->
+        <section class="content-header">
+          <h1>
+            System of organization and accounting of excursions in <b>JINR</b>
+          </h1>
+        </section>
+
+        <!-- Main content -->
+        <div>
+
+          {% block content %}
+            {% endblock %}
+
+        
+        </div>
+        <!-- /.content -->
+      </div>
 
     <!-- REQUIRED JS SCRIPTS -->
     <!-- jQuery -->
