--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -39,8 +39,9 @@
     <!-- DataTables -->
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs/jszip-2.5.0/dt-1.10.18/af-2.3.3/b-1.5.6/b-colvis-1.5.6/b-flash-1.5.6/b-html5-1.5.6/b-print-1.5.6/cr-1.5.0/fc-3.2.5/fh-3.1.4/kt-2.5.0/r-2.2.2/rg-1.1.0/rr-1.2.4/sc-2.0.0/sl-1.3.0/datatables.min.css"/>
     <!-- Добавление дополнительного статического CSS файла -->
-    
     <link   href="{%  static 'css/skins/skin-blue.min.css' %}" rel="stylesheet">
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body class="skin-blue sidebar-mini" style="height: auto; min-height: 100%;">
     <div class="wrapper" style="height: auto; min-height: 100%;">
@@ -111,8 +112,8 @@
           <ul class="sidebar-menu tree" data-widget="tree">
               <li class="header">NAVIGATION</li>
               <!-- Optionally, you can add icons to the links -->
-              <li><a href="#"><i class="fa fa-edit"></i> <span>Apply an application</span></a></li>
-              <li><a href="#"><i class="fa fa-calendar-alt"></i> <span>View all applications</span></a></li>
+              <li><a href="blank"><i class="fa fa-edit"></i> <span>Apply an application</span></a></li>
+              <li><a href="schedule"><i class="fa fa-calendar-alt"></i> <span>View all applications</span></a></li>
             <li class="treeview">
               <a href="#"><i class="fa fa-chart-pie"></i><span>Charts</span>
                 <span class="pull-right-container">
@@ -134,27 +135,21 @@
 
       <!-- Content Wrapper. Contains page content -->
       <div class="content-wrapper" style="min-height: 298px;">
+        <!-- Main content -->
         <!-- Content Header (Page header) -->
         <section class="content-header">
           <h1>
             System of organization and accounting of excursions in <b>JINR</b>
           </h1>
         </section>
-
-        <!-- Main content -->
         <div>
-
           {% block content %}
-            {% endblock %}
-
-        
+            {% endblock %}        
         </div>
         <!-- /.content -->
       </div>
 
     <!-- REQUIRED JS SCRIPTS -->
-    <!-- jQuery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!-- Bootstrap 4 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <!-- AdminLTE App -->
