--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -7,13 +7,37 @@
                 <p class="text-muted text-center">@{{ user.get_username }}</p>
 
                 <ul class="list-group list-group-unbordered mb-3">
-<!--                    {% for role in roles %}-->
-                  <li class="list-group-item">
-                    <b>Followers</b> <a class="float-right">1,322</a>
-                  </li>
-<!--                    {% endfor %}-->
+                    {% for dict in user_groups %}
+                    	{% for key, value in dict.items %}
+                    		{% if key == 'name' %}
+			                  <li class="list-group-item">
+			                    	<b>{{ value }}</b>
+			                    	{% if value == 'Guide' %}
+			                    		<a class="float-right">
+				                    		{% for value in dict.excursion %}
+				                    			<p>
+				                    			{{ value.facility }},
+				                    			{{ value.occasion_excursion }},
+				                    			{{ value.date_excursion }}</p>
+				                    		{% endfor %}
+			                    	</a>
+			                    	{% endif %}
+			                    	{% if value == 'Organizator' %}
+			                    		<a class="float-right">
+				                    		{% for value in dict.excursion %}
+				                    			<p>
+				                    			{{ value.facility }},
+				                    			{{ value.occasion_excursion }},
+				                    			{{ value.date_excursion }}</p>
+				                    		{% endfor %}
+			                    	</a>
+			                    	{% endif %}
+			                  </li>
+		                  	{% endif %}
+		                {% endfor %}
+                    {% endfor %}
                 </ul>
 
-                <a href="#" class="btn btn-primary btn-block"><b>Follow</b></a>
+                <!-- <a href="#" class="btn btn-primary btn-block"><b>Follow</b></a> -->
 </div>
 {% endblock %}
