--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,6 +17,64 @@
         tbody tr.selected td {
           background-color: #ffd659;
         }
+        .timerangepicker-container {
+  display:flex;
+  position: absolute;
+}
+.timerangepicker-label {
+  display: block;
+  line-height: 2em;
+  background-color: #c8c8c880;
+  padding-left: 1em;
+  border-bottom: 1px solid grey;
+  margin-bottom: 0.75em;
+}
+
+.timerangepicker-from,
+.timerangepicker-to {
+  border: 1px solid grey;
+  padding-bottom: 0.75em;
+}
+.timerangepicker-from {
+  border-right: none;
+}
+.timerangepicker-display {
+  box-sizing: border-box;
+  display: inline-block;
+  width: 2.5em;
+  height: 2.5em;
+  border: 1px solid grey;
+  line-height: 2.5em;
+  text-align: center;
+  position: relative;
+  margin: 1em 0.175em;
+}
+.timerangepicker-display .increment,
+.timerangepicker-display .decrement {
+  cursor: pointer;
+  position: absolute;
+  font-size: 1.5em;
+  width: 1.5em;
+  text-align: center;
+  left: 0;
+}
+
+.timerangepicker-display .increment {
+  margin-top: -0.25em;
+  top: -1em;
+}
+
+.timerangepicker-display .decrement {
+  margin-bottom: -0.25em;
+  bottom: -1em;
+}
+
+.timerangepicker-display.hour {
+  margin-left: 1em;
+}
+.timerangepicker-display.period {
+  margin-right: 1em;
+}
     </style>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -38,6 +96,10 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
     <!-- DataTables -->
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs/jszip-2.5.0/dt-1.10.18/af-2.3.3/b-1.5.6/b-colvis-1.5.6/b-flash-1.5.6/b-html5-1.5.6/b-print-1.5.6/cr-1.5.0/fc-3.2.5/fh-3.1.4/kt-2.5.0/r-2.2.2/rg-1.1.0/rr-1.2.4/sc-2.0.0/sl-1.3.0/datatables.min.css"/>
+    <!-- DatePicker -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.css">
+    <!-- TimePicker -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-timepicker/0.5.2/css/bootstrap-timepicker.css">
     <!-- Добавление дополнительного статического CSS файла -->
     <link   href="{%  static 'css/skins/skin-blue.min.css' %}" rel="stylesheet">
     <!-- jQuery -->
@@ -159,6 +221,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.8/angular.min.js"></script>
     <!-- DataTables -->
     <script type="text/javascript" src="https://cdn.datatables.net/v/bs/jszip-2.5.0/dt-1.10.18/af-2.3.3/b-1.5.6/b-colvis-1.5.6/b-flash-1.5.6/b-html5-1.5.6/b-print-1.5.6/cr-1.5.0/fc-3.2.5/fh-3.1.4/kt-2.5.0/r-2.2.2/rg-1.1.0/rr-1.2.4/sc-2.0.0/sl-1.3.0/datatables.min.js"></script>
+    <!-- DatePicker Script -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.js"></script>
+    <!-- TimePicker Script -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-timepicker/0.5.2/js/bootstrap-timepicker.js"></script>
 
     <script>
         $('.sidebar-toggle-btn').pushMenu()
